# bevy-thing

./: .gitignore  Cargo.toml
.cargo/: config.toml  stable-config.toml
assets/: demo1.map  level2.tilemap  level3.tilemap  level4.tilemap  oven.aseprite  stuff.aseprite
assets/micro-roguelike/Tilemap/: oven.aseprite
examples/: all.rs  level5.rs  level6.rs
src/: assets.rs  bevy_rapier_utils.rs  bitpack.rs  bitpack_map.rs  bundle_utils.rs  commands_ext.rs  components.rs  cursor.rs  input.rs  level1.rs  level2.rs  level3.rs  level4.rs  lib.rs  main.rs  map_asset.rs  rapier_debug_render.rs  stuff.rs  utils.rs
src/entities/: inventory_widget.rs  mod.rs  oven.rs  player.rs
src/interactions/: mod.rs
src/levels/: level1.rs  level2.rs  level3.rs  level4.rs  level5.rs  mod.rs
src/systems/: context_map.rs  inventory.rs  jabber.rs  mod.rs  steering.rs  texture_atlas_utils.rs
