[package]
name = "bevy-thing"
version = "0.1.0"
authors = ["Gilbert Roehrbein <gilbert.rohrbein@logmein.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git" }
bevy_rapier2d = { git = "https://github.com/alec-deason/bevy_rapier.git", branch = "update_to_latest_bevy_changes", features = [ "simd-nightly", "parallel" ] }
noise = "0.6"
rand = "0.5"
anyhow = "*"
serde = "*"
