[package]
name = "bevy-thing"
version = "0.1.0"
authors = ["Gilbert Roehrbein <gilbert.rohrbein@logmein.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# { git = "https://github.com/bevyengine/bevy.git", branch = "master" }
bevy = "0.4"
bevy_rapier2d = "0.7"
noise = "0.6"
rand = "0.5"
anyhow = "*"
serde = "*"
bevy_prototype_lyon = { git = "https://github.com/Nilirad/bevy_prototype_lyon.git", branch = "master" }
float_eq = "0.5"

[patch.crates-io]
bevy = { git = "https://github.com/bevyengine/bevy.git", branch = "master" }
